<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activities.WeatherActivity">

    <TextView
        android:id="@+id/txtShowWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/show_weather"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnShowWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#0D83E1"
        android:gravity="center"
        android:text="@string/here"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtShowWeather"
        app:layout_constraintStart_toStartOf="@+id/txtShowWeather"
        app:layout_constraintTop_toBottomOf="@+id/txtShowWeather" />

    <Button
        android:id="@+id/btnBackWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#EC0505"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/temp_today"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnShowWeather"
        app:layout_constraintStart_toStartOf="@+id/btnShowWeather"
        app:layout_constraintTop_toBottomOf="@+id/btnShowWeather" />

    <TextView
        android:id="@+id/txtTempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtTempLabel"
        app:layout_constraintStart_toStartOf="@+id/txtTempLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtTempLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>