<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activities.AdminActivity">


    <EditText
        android:id="@+id/edTxtEmailForDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtEmailDelLabel"
        app:layout_constraintStart_toStartOf="@+id/txtEmailDelLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailDelLabel" />

    <Button
        android:id="@+id/btnDeleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:text="@string/delete"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edTxtEmailForDelete"
        app:layout_constraintStart_toStartOf="@+id/edTxtEmailForDelete"
        app:layout_constraintTop_toBottomOf="@+id/edTxtEmailForDelete" />

    <TextView
        android:id="@+id/txtAdminPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/admin_page"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEmailDelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/mail_forDelete"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/txtAdminPage"
        app:layout_constraintStart_toStartOf="@+id/txtAdminPage"
        app:layout_constraintTop_toBottomOf="@+id/txtAdminPage" />

    <Button
        android:id="@+id/btnLogOutAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:backgroundTint="#EC0505"
        android:gravity="center"
        android:text="@string/logOut"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteUser" />


</androidx.constraintlayout.widget.ConstraintLayout>